# template-dockerfiles

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  TODO.md  action.yml  go.mod  go.sum  main.go  pyproject.toml  run-go-fix.sh  run-go-vet.sh
.github/: dependabot.yml
.github/workflows/: build-go.yml  build.yml.disable  dependabot-release.yml  python-build-and-test.yml  python-publish.yml  python-publish.yml.broken
cmd/td/: main.go
cmd/template-dockerfiles/: main.go  main2.go
example/: build.yaml  complex.yaml  demo.yaml  multiplatform.yaml  simple.yaml  test-cases.yaml
example/base/: Dockerfile.j2  Dockerfile.tpl
example/jdk/: Dockerfile.jinja2  Dockerfile.tpl
example/jre/: Dockerfile.jinja2  Dockerfile.tpl  jre-build.sh
pkg/builder/: builder.go  buildx.go  docker.go  engine.go  executor.go  executor_test.go  stage.go  utils.go
pkg/cmd/: cmd.go  cmd_test.go
pkg/config/: config.go  flags.go
pkg/flags/: flags.go
pkg/image/: env.go  image.go  image_test.go  opencontainers.go  template.go  template_test.go
pkg/logger/: logger.go
pkg/parser/: buildx_engine.go  byte-count.go  docker.go  docker_engine.go  engine.go  (+8 more)
templater/: __init__.py  config.py  flags.py  logger.py  main.py  parser.py  runner.py
test/: test_smoke.py
tests/: Dockerfile  conftest.py  mutliplatform-Dockerfile.tpl  smoke_test.go  test-1.yaml  test-10.yaml  test-11.yaml  test-12.yaml  test-3.yaml  test-4.yaml  test-5.yaml  test-6.yaml  test-7.yaml  test-8.yaml  test-9.yaml  test_smoke.py  tests_test.go  tomcat-Dockerfile.tpl
(+10 files in other folders)
